Ajustes a opciones en DashBoard paciente/medico

--- a/css/medico.css
+++ b/css/medico.css
@@ -78,16 +78,16 @@ body {
 
 .submenu__infoPersonal,
 .submenu__citas,
-.submenu__Datos,
-.submenu__Covid{
+.submenu__ConsulPacientes,
+.submenu__ConsulCitas{
   list-style: none;
   display: none;
 }
 
 .submenu__infoPersonal-item,
 .submenu__cita-item,
-.submenu__Covid-item,
-.submenu__Datos-item{
+.submenu__ConsulPacientes-item,
+.submenu__ConsulCitas-item{
   display: flex;
   align-items: center;
   font-size: 1.6rem;
@@ -105,21 +105,20 @@ body {
 
 .submenu__cita-item:hover{
   background: rgb(214, 214, 214);
-
 }
-.submenu__Covid-item:hover{
-  background: rgb(214, 214, 214);
-}
-.submenu__Datos-item:hover{
+.submenu__ConsulCitas-item:hover{
   background: rgb(214, 214, 214);
 }
 .submenu__infoPersonal-item:hover{
   background: rgb(214, 214, 214);
 }
+.submenu__ConsulPacientes-item:hover{
+  background: rgb(214, 214, 214);
+}
 .submenu__infoPersonal-item a,
 .submenu__cita-item a,
-.submenu__Covid-item a,
-.submenu__Datos-item a{
+.submenu__ConsulPacientes-item a,
+.submenu__ConsulCitas-item a{
 color: black;
 }
 
