--- a/css/paciente.css
+++ b/css/paciente.css
@@ -252,16 +252,15 @@ color: black;
 .divBtnCerrar a{
   color: var(--color-secundario);
 }
-
-
 .ContPersonAside{
   height: 87.5%;
   display: flex;
   align-items: center;
   right: -100px;
-}
-.divBtnPerson{
   transition: 0.5s;
+}
+
+.ContPersonAside_btn{
   display: flex;
   justify-content: center;
   align-items: center;
@@ -277,10 +276,14 @@ color: black;
 .checkBtn{
   cursor: pointer;
 }
-.divPersonInfo{
-  font-size: 1rem;
+.checkBtn:checked~.ContPersonAside{
+  margin-left: 32%;
+}
+.ContPersonAside_info{
+  
+  font-size: 2rem;
   transition: 0.5s;
-  width: 9rem;
+  width: 30rem;
   height: 50rem;
   background: var(--color-secundario);
   border-top-left-radius: 1rem;
@@ -289,7 +292,7 @@ color: black;
 #btnMenu{
   display: none;
 }
-#btnMenu:checked ~ .divPersonInfo{
+#btnMenu:checked ~ .ContPersonAside_info{
   transform: translateX(50px);
   background: var(--color-c);
 }
