--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@ html{
 
 .content-viewport{
     height: 100vh;
-    background-image: url(/img/back.png);
+    background-image: url(../img/back.png);
     background-repeat: no-repeat;
     background-size: cover;
 }
