--- a/frontend/css/admin.css
+++ b/frontend/css/admin.css
@@ -71,7 +71,7 @@ table {
     width: 100%;
     white-space: nowrap;
 }
-tr:hover > td{
+tbody > tr:hover {
     background-color: var(--buttonAdd);
     cursor: pointer;
     color: var(--white);
@@ -82,7 +82,7 @@ tr:nth-child(even) {
 }
 th,
 td {
-    border: solid .2rem #dee2e6;
+    /* border: solid .2rem #dee2e6; */
     padding: 1rem;
 }
 th {
@@ -98,7 +98,6 @@ td {
 }
 .text-add {
     text-align: center;
-    margin-bottom: 2rem;
     text-transform: uppercase;
 }
 
@@ -112,7 +111,7 @@ td {
     height: 10rem;
     /* border: solid 1px #3db8ff; */
 }
-.cent-header{
+.title-header{
     background-color: var(--white);
     display: flex;
     justify-content: center;
@@ -126,7 +125,7 @@ td {
     font-size: 3rem; 
 } */
 
-.logo__text-Cent{
+.logo__text-cent{
     color:#3db8ff;
     font-weight: 600;
     /* border: solid 1px #3db8ff; */
@@ -159,7 +158,7 @@ td {
 
 
 /* main */
-.MainContainer{
+.main-container{
     /* border: solid 1px red; */
     width: 100vw;
     height: 100vh;
@@ -286,15 +285,13 @@ ul > .sub-item a{
 }
 .modal__close{
     display: flex;
-    justify-content: flex-end;
-    position: absolute;
+    justify-content: space-between;
+    /* position: absolute;
     top: -1rem;
     left: -1rem;
-    right: -1rem;
-
+    right: -1rem; */
     margin: 1rem;
     background: var(--color-secundario);
-    display: flex;
 }
 .close {
     color: var(--white);
@@ -315,7 +312,7 @@ ul > .sub-item a{
 }
 
 /* formulario */
-.formAdd{
+.form{
     overflow: auto;
     /* border: solid 1px red; */
     width: 100%;
@@ -324,7 +321,7 @@ ul > .sub-item a{
     
     grid-template-columns: 100%;
 }
-.formAdd-item{
+.form-item{
     width: 100%;
     /* border: solid 1px rgb(33, 44, 141); */
     height: 100%;
@@ -336,27 +333,27 @@ ul > .sub-item a{
     font-size: 2rem;
     color: #505050;
 }
-.formAdd-item label{
+.form-item label{
     margin-bottom: .5rem;
 }
-.formAdd-item input{
+.form-item input{
     height: 4rem;
     color: #5a5a5a;
     /* max-width: 50rem; */
     border: solid .1rem rgb(192, 192, 192);
 }
-.formAdd-item select{
+.form-item select{
     height: 4rem;
     color: #5a5a5a;
     /* max-width: 50rem; */
     border: solid .1rem rgb(192, 192, 192);
 }
-.formAdd-item:last-child{
+.form-item:last-child{
     grid-column: 1/2;
     display: flex;
     align-items: center;
 }
-.formAdd-item:last-child input{
+.form-item:last-child input{
     width: 60%;
     max-width: 55rem;
     background: var(--color-secundario);
@@ -365,14 +362,14 @@ ul > .sub-item a{
     cursor: pointer;
     transition: 0.2s;
 }
-.formAdd-item:last-child input:hover{
+.form-item:last-child input:hover{
     background: #3db8ff;
 }
 @media  screen and (min-width: 730px){
-    .formAdd{
+    .form{
         grid-template-columns: 50% 50%;
     }
-    .formAdd-item:last-child{
+    .form-item:last-child{
         grid-column: 1/3;
         display: flex;
         align-items: center;
