--- a/admin/css/admin.css
+++ b/admin/css/admin.css
@@ -102,16 +102,25 @@ button {
 .text-add {
     text-align: center;
     text-transform: uppercase;
+    display: flex;
+    align-items: center;
+    margin: 0 auto;
+}
+
+/** Contenedor lateral Izquierdo */
+.container-lateral-left {
+    position: fixed;
 }
 
 /** === Header - Site === **/
 .site-header {
-    background-color: var(--colorDashboard);
+    background-color: var(--color-blue2);
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 4rem; 
     height: 10rem;
+    width: 29rem;
     /* border: solid 1px #3db8ff; */
 }
 .title-header{
@@ -177,19 +186,15 @@ button {
 
 /** === Menu - Navegation === **/
 .menu-navegation {
-    position: fixed;
     height: 100vh;
     width: 29rem;
-    /* background-color: var(--colorDashboard); */
-    transition: 0;
     background: linear-gradient(to top, #137cf3, rgb(0, 174, 255));
 
 }
-ul > .items {
+.items {
     display: flex;
     flex-direction: column;
     /* justify-content: space-between; */
-    background-color: var(--colorDashboard);
     /* padding: 1.5rem 0rem; */
     /* padding-right: 0; */
     font-size: 1.8rem;
@@ -197,21 +202,37 @@ ul > .items {
     color: white;
     transition: 0.3s;
     height: 100%;
-    
+    overflow: hidden;    
 }
-ul > .items p{
+.list-items {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.list-items > span {
+    padding-right: 2rem;
+}
+.list__arrow {
+    transition: transform .3s; 
+}
+.arrow .list__arrow{
+    transform: rotate(90deg);
+}
+.item{
     padding: 1.5rem 2rem;
     text-decoration: none;
     color: white; 
-}
-.items > p{
     display: flex;
     justify-content: space-between;
 }
 .items:hover {
     background-color: rgba(0, 0, 0, .05);
 }
-ul > .sub-item {
+.list__show {
+    transition: height .4s;
+    height: 0;
+}
+.sub-item {
     color: #ffffff;
     padding: 1rem;
     padding-left: 4rem;
@@ -221,12 +242,12 @@ ul > .sub-item {
     width: 100%;
     transition: 0.2s;
 }
-ul > .sub-item:hover {
+.sub-item:hover {
     padding-left: 2rem;
     border-right: solid .8rem white;
     /* border-bottom: solid 1px white; */
 }
-ul > .sub-item a{
+.sub-item a{
     color: white;
 }
 
@@ -314,16 +335,11 @@ ul > .sub-item a{
     position: relative;
     background: var(--white);
     width: 70%;
-    height: 75%;
     padding: 1rem;
 }
 .modal__close{
     display: flex;
     justify-content: space-between;
-    /* position: absolute;
-    top: -1rem;
-    left: -1rem;
-    right: -1rem; */
     margin: 1rem;
     background: var(--color-secundario);
 }
@@ -345,23 +361,14 @@ ul > .sub-item a{
     background: rgb(235, 46, 46);
 }
 
-/* formulario */
+/* Formulario */
 .form{
-    overflow: auto;
-    /* border: solid 1px red; */
-    width: 100%;
-    height: 93%;
     display: grid;
-    
-    grid-template-columns: 100%;
+    grid-template-columns: 50% 50%;
 }
 .form-item{
-    width: 100%;
-    /* border: solid 1px rgb(33, 44, 141); */
-    height: 100%;
     display: flex;
     flex-direction: column;
-    align-items: left;
     justify-content: center;
     padding: 2rem;
     font-size: 2rem;
@@ -383,13 +390,11 @@ ul > .sub-item a{
     border: solid .1rem rgb(192, 192, 192);
 }
 .form-item:last-child{
-    grid-column: 1/2;
-    display: flex;
-    align-items: center;
+    grid-column: 1/3;
 }
 .form-item:last-child input{
-    width: 60%;
-    max-width: 55rem;
+    padding: 1rem 0;
+    width: 100%;
     background: var(--color-secundario);
     color: white;
     border: none;
@@ -398,14 +403,4 @@ ul > .sub-item a{
 }
 .form-item:last-child input:hover{
     background: #3db8ff;
-}
-@media  screen and (min-width: 730px){
-    .form{
-        grid-template-columns: 50% 50%;
-    }
-    .form-item:last-child{
-        grid-column: 1/3;
-        display: flex;
-        align-items: center;
-    }
 }
