--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,7 @@ html{
 }
 
 :root{
-    --primary-color: rgb(36,146,255, 0.56);
+    --primary-color: rgb(36,146,255);
     --secondary-color: rgb(80,80,80);
 }
 
